@@ -171,3 +171,4 @@ estan en subcarpeta editview/
 
 -tbblue composite sprites: revisar cambios de parametros cuando B. Relative Sprite, Composite Type y C. Relative Sprite, Unified Type
 Ejemplo: Y8 = Ninth bit of the sprite’s Y coordinate
+*sprite zoom x,y ok
