@@ -18,6 +18,10 @@ Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
 Improved 1 bit resample audio filter 
 Improved ZRCP: Added MMU information to cpu-history command
 
+Improved TBBlue emulation:
+-Added emulation of tbblue joystick type (register 5)
+-Added sprite zoom emulation
+
 Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo
 Fixed restoring machine to msx, coleco, sg1000 and svi
 Fixed showing last core frame time in Core Statistics window
@@ -30,8 +34,6 @@ Fixed QL bugs:
 -Fixed possible hang calling IO.SSTRG
 -Fixed cursor flashing
 
-Fixed TBBlue bugs:
--Added emulation of tbblue joystick type (register 5)
 
 Fixed segfaults when changing machines and having ZX Desktop windows opened
 Fixed easter egg and cyrillic characters
